--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+envSSEWeather/
+
 # Python
 __pycache__/
 *.py[cod]
@@ -8,8 +16,6 @@ build/
 develop-eggs/
 dist/
 downloads/
-eggs/
-.eggs/
 lib/
 lib64/
 parts/
@@ -18,44 +24,22 @@ var/
 wheels/
 pip-wheel-metadata/
 share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
-# Virtual Environment
+# Virtual environments
 venv/
-env/
 ENV/
-
-# Environment files
-.env
-.env.local
-.env.development
-.env.test
-.env.production
-envSSEWeather/
+env/
+.venv/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Flask
-instance/
-.webassets-cache
-
 # Logs
 *.log
-logs/
-
-# Testing
-.coverage
-.pytest_cache/
-.tox/
-htmlcov/
