--- a/.github/workflows/ci_cd_workflow.yml
+++ b/.github/workflows/ci_cd_workflow.yml
@@ -76,14 +76,14 @@ jobs:
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     
     - name: Extract metadata
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ secrets.DOCKERHUB_USERNAME }}/weather-sse
+        images: ${{ secrets.DOCKER_USERNAME }}/weather-sse
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -110,7 +110,7 @@ jobs:
     - name: Deploy to production
       run: |
         echo "🚀 Ready to deploy to production!"
-        echo "Docker image: ${{ secrets.DOCKERHUB_USERNAME }}/weather-sse:latest"
+        echo "Docker image: ${{ secrets.DOCKER_USERNAME }}/weather-sse:latest"
         # Add your deployment steps here (e.g., deploy to cloud provider)
     
     - name: Deployment notification
